python-cinderclient (1:1.2.2-1) UNRELEASED; urgency=medium

  * New upstream release.
    - d/control: Align requirements with upstream.
    - d/gbp.conf: Update gbp configuration for liberty branch.
  * Converge Ubuntu and Debian package:
    - d/tests/*: Add DEP 8 tests from Ubuntu.
    - d/rules: Fail the build if tests fail.

 -- Corey Bryant <corey.bryant@canonical.com>  Mon, 08 Jun 2015 10:40:39 -0400

python-cinderclient (1:1.1.1-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Mon, 27 Apr 2015 19:18:58 +0000

python-cinderclient (1:1.1.1-1) experimental; urgency=medium

  * New upstream release.
  * Uploading to experimental just right before Jessie freeze.
  * Updated (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Tue, 30 Sep 2014 14:50:23 +0800

python-cinderclient (1:1.0.8-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Fri, 18 Apr 2014 06:36:30 +0000

python-cinderclient (1:1.0.8-1) experimental; urgency=low

  * New upstream release.
  * Standards-Version: is now 3.9.5.
  * New (build-)depends for this release.
  * Disabled useless dh targets.

 -- Thomas Goirand <zigo@debian.org>  Wed, 09 Apr 2014 00:46:18 +0800

python-cinderclient (1:1.0.6-2) unstable; urgency=low

  * Added missing build-depends: python-babel.

 -- Thomas Goirand <zigo@debian.org>  Mon, 07 Oct 2013 07:20:30 +0000

python-cinderclient (1:1.0.6-1) unstable; urgency=low

  * New upstream release.
  * Fixed new (build-)depends for this release.
  * Bumped Standard-Version: to 3.9.4.

 -- Thomas Goirand <zigo@debian.org>  Tue, 01 Oct 2013 15:19:25 +0800

python-cinderclient (1:1.0.5-2) unstable; urgency=low

  * Added missing python-requests (build-)depends.

 -- Thomas Goirand <zigo@debian.org>  Wed, 11 Sep 2013 16:54:23 +0800

python-cinderclient (1:1.0.5-1) unstable; urgency=low

  * New upstream release.
  * Ran wrap-and-sort.