@@ -4,6 +4,6 @@ debian-branch = debian/liberty
 upstream-tag = %(version)s
 compression = xz
 
-[git-buildpackage]
+[buildpackage]
 export-dir = ../build-area/
 cleaner = true
