@@ -1,11 +1,16 @@
 python-cinderclient (1:1.2.2-1) UNRELEASED; urgency=medium
 
+  [ Corey Bryant ]
   * New upstream release.
     - d/control: Align requirements with upstream.
     - d/gbp.conf: Update gbp configuration for liberty branch.
   * Converge Ubuntu and Debian package:
     - d/tests/*: Add DEP 8 tests from Ubuntu.
     - d/rules: Fail the build if tests fail.
+
+  [ Thomas Goirand ]
+  * Added Python3 support.
+  * Swiched to using testr directly when running tests.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Mon, 08 Jun 2015 10:40:39 -0400
 
